Bug 241181 - Opening inaccessible projects leads to a startup blockade
Summary: Opening inaccessible projects leads to a startup blockade
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: general (show other bugs)
Version: 2.1b4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-09 10:32 UTC by lizardking
Modified: 2010-06-20 00:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lizardking 2010-06-09 10:32:49 UTC
Version:           2.1b4 (using KDE 4.4.2) 
OS:                Linux

I created multiple projects, whereby one resides on my external usb drive. After restarting Kile while the external drive is inaccessible, the loading screens hangs forever. It gives me a label called "Scanning project files..." and remains with 59%. No other UI element is accessible furthermore.

As a workaround, I had to remove the inaccessible project/files in Kile's configuration file  ~/.kde/share/config/kilerc, 

Reproducible: Always

Steps to Reproduce:
- Open a project on an external drive
- Close Kile
- Remove external drive
- Start Kile


Actual Results:  
Startup blockade  

Expected Results:  
Message of inaccessible projects/files of a project or the case could be ignored

OS: Linux (i686) release 2.6.32-22-generic
Compiler: cc
Comment 1 Michel Ludwig 2010-06-20 00:13:08 UTC
SVN commit 1140128 by mludwig:

Don't check if a project file doesn't exist inside the Kile class as this will confuse the doc manager, resulting in the open-project dialog not being hidden.

BUG: 241181


 M  +6 -8      kile.cpp  
 M  +2 -2      kiledocmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1140128