Don't check if a project file doesn't exist inside the Kile class as this will confuse the doc manager, resulting in the open-project dialog not being hidden.

BUG: 241181